1.txt
test.cpp:1:17: error: 'z' is not a class template
    1 | struct x struct z<x(x(x(x(x(x(y,x(y><y*,x(y*w>v<y*,w,x{}
      |                 ^
compilation terminated due to -Wfatal-errors.